--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-      <p>GitHub: <a href="https://github.com/yourusername">github.com/yourusername</a></p>
+      <p>Email: <a href="mailto:colinluangrath@gmail.com">colinluangrath@gmail.com</a></p>
+      <p>GitHub: <a href="https://github.com/cluangrath4">github.com/cluangrath4</a></p>
     </section>
   </main>
 
