Update index.html still working

--- a/index.html
+++ b/index.html
@@ -103,20 +103,19 @@
 
       <div style="display:flex;gap:8px;align-items:center">
         <button class="icon-btn" id="themeBtn" title="Toggle theme">🌓</button>
-        <a class="btn-ghost" href="#contact">Get in touch</a>
       </div>
     </header>
 
     <main>
       <section class="hero">
         <div class="hero-card appear">
-          <h1>Hi — I’m Colin. I build ML tools, demos, and research projects.</h1>
+          <h1>Hi — I’m Colin.</h1>
           <p class="sub">Computer Science & Psychology student at UW–Madison. Interested in machine learning systems, human–AI interaction, and creative tools.</p>
 
           <div class="tags">
             <div class="tag">Python</div>
             <div class="tag">Machine Learning</div>
-            <div class="tag">Systems</div>
+            <div class="tag">Computer Systems & Architecture</div>
             <div class="tag">Computer Vision</div>
             <div class="tag">Game Design</div>
           </div>
@@ -157,11 +156,10 @@
           </article>
 
           <article class="card">
-            <h3>Bitsy narrative escape game</h3>
+            <h3>Web-based games</h3>
             <p class="muted">Psychology-driven interactive narrative built for Game Design class. Uses branching timelines and player reflection.</p>
             <div style="margin-top:12px;display:flex;gap:8px">
-              <a class="btn-ghost" href="#">Play</a>
-              <a class="btn-ghost" href="#">Source</a>
+              <a class="btn-ghost" href="https://cluangrath4.itch.io/">Play</a>
             </div>
           </article>
 
@@ -179,7 +177,7 @@
       <section id="about" class="appear">
         <h2 style="margin-top:28px">About</h2>
         <div class="hero-card" style="margin-top:12px">
-          <p class="muted">I study the intersection of machine learning systems and human-centered research. Currently exploring how AI tools affect student motivation and building tools that make ML research easier to reproduce.</p>
+          <p class="muted">I'm a 3rd year Undergraduate at the University of Wisconsin-Madison studying Computer Science, Psychology, and Game Design.</p>
           <ul class="muted" style="margin-top:10px">
             <li>UW–Madison — CS & Psychology</li>
             <li>Argonne National Lab — ML workload emulator (Research Intern)</li>
@@ -191,10 +189,9 @@
       <section id="contact" class="appear">
         <h2 style="margin-top:28px">Contact</h2>
         <div class="hero-card" style="margin-top:12px;display:flex;gap:18px;flex-direction:column">
-          <p class="muted">Want to collaborate, or need code help? Email me or open an issue on GitHub.</p>
+          <p class="muted">Want to collaborate or get in touch? Email me!</p>
           <div style="display:flex;gap:12px;flex-wrap:wrap">
             <a class="cta" href="mailto:you@domain.com">Email</a>
-            <a class="btn-ghost" href="https://github.com/cluangrath4/cluangrath.github.io" target="_blank">Repo</a>
           </div>
         </div>
       </section>
