Testing functionality of Spotify + Changed Content

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>About — Colin Luangrath</title>
+  <title>About - Colin Luangrath</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -28,8 +28,9 @@
           <h3>About</h3>
           <p>I'm a 3rd year Undergraduate at the University of Wisconsin-Madison studying Computer Science, Psychology, and Game Design.</p>
           <ul>
-            <li>Argonne National Lab — ML workload emulator (Research Intern)</li>
-            <li>Interests: ML systems, CV, HCI, Game Design</li>
+            <li>Summer 2024, 2025: Argonne National Lab - Machine Learning workload emulator (Research Assistant)</li>
+            <li>Interests: ML systems, CV, HCI, HPC, Game Design</li>
+            <li>Current Obsessions: UI/UX, Computer Architecture, Trading Card Games, Bouldering</li>
           </ul>
         </div>
       </article>
