--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,11 @@
         <div class="title-bar"><span>Contact.exe</span></div>
         <div class="window-content">
           <h3>Let's Connect</h3>
-          <p>Want to collaborate or get in touch? Send me an email.</p>
+          <p>Want to collaborate or get in touch? Look no further.</p>
           <div style="margin-top: 16px;">
             <a class="btn" href="mailto:colinluangrath@gmail.com">Email Me</a>
             <a class="btn" href="https://github.com/cluangrath4" target="_blank">GitHub</a>
+            <a class="btn" href="https://www.linkedin.com/in/colinluangrath/" target="_blank">LinkedIn</a>
           </div>
         </div>
       </article>
