--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           </div>
         </div>
         <div class="window-content">
-          <h1>Hi — I’m Colin.</h1>
-          <p>Computer Science & Psychology student at UW–Madison. Interested in machine learning systems, human–AI interaction, and creative tools.</p>
+          <h1>Hi! I'm Colin.</h1>
+          <p>Computer Science & Psychology student at UW-Madison. Interested in machine learning systems, human-AI interaction, and creative tools.</p>
           <p><strong>Skills:</strong> Python, Machine Learning, Computer Systems & Architecture, Computer Vision, Game Design</p>
           <div style="margin-top: 16px; display: flex; gap: 8px;">
             <a class="btn" href="https://github.com/cluangrath4" target="_blank">GitHub</a>
@@ -48,8 +48,38 @@
         <div class="window-content" style="text-align: center;">
           <div style="width: 80px; height: 80px; background: #3a93ff; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 24px; font-weight: bold; margin: 0 auto 12px auto;">CL</div>
           <strong>Colin Luangrath</strong>
-          <p style="font-size: 12px;">CS & Psychology — UW–Madison</p>
-          <p style="font-size: 12px; margin-top: 12px;">14+ Projects<br>Argonne Research Intern</p>
+          <p style="font-size: 12px;">CS, Psychology, and Game Design @ UW-Madison</p>
+          <p style="font-size: 12px; margin-top: 12px;">10+ Projects<br>Center for Dairy Research</p>
+        </div>
+        <div class="window">
+          <div class="title-bar">
+            <span>Now_Playing.exe</span>
+            <div class="title-bar-controls">
+              <span class="title-bar-btn close-btn">X</span>
+            </div>
+          </div>
+          <div class="window-content" style="display: flex; gap: 12px; align-items: center;">
+            <div style="width: 48px; height: 48px; background: #000; display: flex; align-items: center; justify-content: center; font-size: 24px;">🎵</div>
+            <div>
+              <strong>Currently Listening</strong>
+              <p id="now-playing-text" style="font-size: 12px; margin: 2px 0 0 0; color: #555;">Not playing anything</p>
+            </div>
+          </div>
+        </div>
+        <div class="window">
+          <div class="title-bar">
+            <span>Library.txt</span>
+            <div class="title-bar-controls">
+              <span class="title-bar-btn close-btn">X</span>
+            </div>
+          </div>
+          <div class="window-content">
+            <strong>📚 Now Reading</strong>
+            <div style="margin-top: 8px; font-size: 13px;">
+              <p style="margin-bottom: 4px;"><em>The Design of Everyday Things</em></p>
+              <p style="margin: 0; color: #555;">by Don Norman</p>
+            </div>
+          </div>
         </div>
       </aside>
     </main>
