--- a/projects.html
+++ b/projects.html
@@ -29,14 +29,14 @@
           <div class="window-content">
             <h3>Performance eval of DLIO</h3>
             <p style="font-size: 13px;">Scaling study for deep learning I/O on ALCF systems. Tools, traces, and visualizations.</p>
-            <a href="#">View Repo</a>
+            <a href="https://github.com/cluangrath4/dlio_ml_workloads/tree/main">View Repo</a>
           </div>
         </article>
         <article class="window">
           <div class="title-bar"><span>Web_Games.exe</span></div>
           <div class="window-content">
             <h3>Web-based games</h3>
-            <p style="font-size: 13px;">Psychology-driven interactive narrative built for Game Design class.</p>
+            <p style="font-size: 13px;">Interactive games built for CURRIC 357 - Game Design 1</p>
             <a href="https://cluangrath4.itch.io/">Play on Itch.io</a>
           </div>
         </article>
@@ -44,8 +44,8 @@
           <div class="title-bar"><span>YOLO_Detector.app</span></div>
           <div class="window-content">
             <h3>YOLO phone detector</h3>
-            <p style="font-size: 13px;">Mobile object detection demo — real-time YOLO integration and UI.</p>
-            <a href="#">View Docs</a>
+            <p style="font-size: 13px;">Mobile object detection demo - real-time YOLO integration and UI.</p>
+            <a href="https://github.com/cluangrath4/TeamName">View Repo</a>
           </div>
         </article>
       </div>
