idk what's up with spotify aahhh

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
           <div class="window-content">
             <strong>📚 Now Reading</strong>
             <div style="margin-top: 8px; font-size: 13px;">
-              <p style="margin-bottom: 4px;"><em>The Design of Everyday Things</em></p>
-              <p style="margin: 0; color: #555;">by Don Norman</p>
+              <p style="margin-bottom: 4px;"><em>Lord of Mysteries Volume 2: Faceless</em></p>
+              <p style="margin: 0; color: #555;">by Cuttlefish That Loves Diving</p>
             </div>
           </div>
         </div>
