Okay, so hopefully this fixes it

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="title-bar-controls"><span class="title-bar-btn close-btn">X</span></div>
           </div>
           <div class="window-content" style="display: flex; gap: 12px; align-items: center;">
-            <img id="now-playing-art" src="" style="width: 48px; height: 48px; background: #000; object-fit: cover; border: 1px solid #888;" alt="Album Art">
+            <img id="now-playing-art" src="" onerror="this.onerror=null; this.src='https://win98icons.alexmeub.com/icons/png/cd_audio_cd_a-3.png';" style="width: 48px; height: 48px; background: #000; object-fit: cover; border: 1px solid #888;" alt="Album Art">
             <div>
               <strong style="font-size: 13px;">Currently Listening</strong>
               <p id="now-playing-text" style="font-size: 12px; margin: 4px 0 0 0;">Loading...</p>
