--- a/journal.html
+++ b/journal.html
@@ -23,6 +23,7 @@
     </header>
     <main>
       <h2 style="color: white; text-shadow: 1px 1px 2px black;">Psychology of the Internet Term Project</h2>
+      <p style="color: white; text-shadow: 1px 1px 2px black; margin-bottom: 24px; font-size: 14px;">Summaries and personal takes on my Psychology of the Internet daily learnings! All opinions are my own.</p>
       <div class="journal-grid">
         <article class="window">
           <div class="title-bar"><span>Journal_Day1.doc</span></div>
