Update - Journal Page
Updated the journal page with dropdown menu, will add content after I like the design.

--- a/journal.html
+++ b/journal.html
@@ -21,53 +21,88 @@
         </nav>
       </div>
     </header>
-    <main>
-      <h2 style="color: white; text-shadow: 1px 1px 2px black;">Psychology of the Internet Term Project</h2>
-      <p style="color: white; text-shadow: 1px 1px 2px black; margin-bottom: 24px; font-size: 14px;">Summaries and personal takes on my Psychology of the Internet daily learnings! All opinions are my own.</p>
-      <div class="journal-grid">
-        <article class="window">
-          <div class="title-bar"><span>Journal_Day1.doc</span></div>
-          <div class="window-content">
-            <strong>Day 1: Assignment Review</strong>
-            <p style="font-size: 13px; margin-top: 8px;">Placeholder for day 1 entry regarding online behavior and identity...</p>
+<main>
+      <h2 style="color: white; text-shadow: 1px 1px 2px black;">Psychology of the Internet Project</h2>
+      <p style="color: white; text-shadow: 1px 1px 2px black; margin-bottom: 24px; font-size: 14px;">A six-day journal exploring online behavior, identity, and the digital world.</p>
+
+      <details class="unit-folder" open>
+        <summary>Unit 1 (January 20 – January 25): Welcome to the Internet</summary>
+        <div class="unit-content">
+          <div class="journal-grid">
+            <article class="window"><div class="title-bar"><span>Day1.doc</span></div><div class="window-content"><strong>Day 1</strong><p style="font-size: 13px;">Entry here...</p></div></article>
+            <article class="window"><div class="title-bar"><span>Day2.doc</span></div><div class="window-content"><strong>Day 2</strong><p style="font-size: 13px;">Entry here...</p></div></article>
+            <article class="window"><div class="title-bar"><span>Day3.doc</span></div><div class="window-content"><strong>Day 3</strong><p style="font-size: 13px;">Entry here...</p></div></article>
+            <article class="window"><div class="title-bar"><span>Day4.doc</span></div><div class="window-content"><strong>Day 4</strong><p style="font-size: 13px;">Entry here...</p></div></article>
+            <article class="window"><div class="title-bar"><span>Day5.doc</span></div><div class="window-content"><strong>Day 5</strong><p style="font-size: 13px;">Entry here...</p></div></article>
+            <article class="window"><div class="title-bar"><span>Day6.doc</span></div><div class="window-content"><strong>Day 6</strong><p style="font-size: 13px;">Entry here...</p></div></article>
           </div>
-        </article>
-        <article class="window">
-          <div class="title-bar"><span>Journal_Day2.doc</span></div>
-          <div class="window-content">
-            <strong>Day 2: Reflection</strong>
-            <p style="font-size: 13px; margin-top: 8px;">Placeholder for day 2 entry discussing anonymity effects...</p>
-          </div>
-        </article>
-        <article class="window">
-          <div class="title-bar"><span>Journal_Day3.doc</span></div>
-          <div class="window-content">
-            <strong>Day 3: Case Study</strong>
-            <p style="font-size: 13px; margin-top: 8px;">Placeholder for day 3 entry on social media validation loops...</p>
-          </div>
-        </article>
-        <article class="window">
-          <div class="title-bar"><span>Journal_Day4.doc</span></div>
-          <div class="window-content">
-            <strong>Day 4: Synthesis</strong>
-            <p style="font-size: 13px; margin-top: 8px;">Placeholder for day 4 entry...</p>
-          </div>
-        </article>
-        <article class="window">
-          <div class="title-bar"><span>Journal_Day5.doc</span></div>
-          <div class="window-content">
-            <strong>Day 5: Application</strong>
-            <p style="font-size: 13px; margin-top: 8px;">Placeholder for day 5 entry...</p>
-          </div>
-        </article>
-        <article class="window">
-          <div class="title-bar"><span>Journal_Day6.doc</span></div>
-          <div class="window-content">
-            <strong>Day 6: Conclusion</strong>
-            <p style="font-size: 13px; margin-top: 8px;">Placeholder for day 6 wrapping up the week's topics...</p>
-          </div>
-        </article>
-      </div>
+        </div>
+      </details>
+
+      <details class="unit-folder">
+        <summary>Unit 2 (January 26 – February 1): Learning via the Internet</summary>
+        <div class="unit-content"><div class="journal-grid"></div></div>
+      </details>
+
+      <details class="unit-folder">
+        <summary>Unit 3 (February 2 – February 8): Educating via the Internet</summary>
+        <div class="unit-content"><div class="journal-grid"></div></div>
+      </details>
+
+      <details class="unit-folder">
+        <summary>Unit 4 (February 9 – February 15): Communicating via the Internet</summary>
+        <div class="unit-content"><div class="journal-grid"></div></div>
+      </details>
+
+      <details class="unit-folder">
+        <summary>Unit 5 (February 16 – February 22): Broadcasting via the Internet</summary>
+        <div class="unit-content"><div class="journal-grid"></div></div>
+      </details>
+
+      <details class="unit-folder">
+        <summary>Unit 6 (February 23 – March 1): Socializing on the Internet</summary>
+        <div class="unit-content"><div class="journal-grid"></div></div>
+      </details>
+
+      <details class="unit-folder">
+        <summary>Unit 7 (March 2 – March 8): Emotion and the Internet</summary>
+        <div class="unit-content"><div class="journal-grid"></div></div>
+      </details>
+
+      <details class="unit-folder">
+        <summary>Unit 8 (March 9 – March 15): Motivation and the Internet</summary>
+        <div class="unit-content"><div class="journal-grid"></div></div>
+      </details>
+
+      <details class="unit-folder">
+        <summary>Unit 9 (March 16 – March 22): Perception & Attention to the Internet</summary>
+        <div class="unit-content"><div class="journal-grid"></div></div>
+      </details>
+
+      <details class="unit-folder">
+        <summary>Unit 10 (March 23 – March 29): Decision Making on the Internet</summary>
+        <div class="unit-content"><div class="journal-grid"></div></div>
+      </details>
+
+      <details class="unit-folder">
+        <summary>Unit 11 (April 6 – April 12): Development & Aging on the Internet</summary>
+        <div class="unit-content"><div class="journal-grid"></div></div>
+      </details>
+
+      <details class="unit-folder">
+        <summary>Unit 12 (April 13 – April 19): Personality on the Internet</summary>
+        <div class="unit-content"><div class="journal-grid"></div></div>
+      </details>
+
+      <details class="unit-folder">
+        <summary>Unit 13 (April 20 – April 26): Clinical Psychology on the Internet</summary>
+        <div class="unit-content"><div class="journal-grid"></div></div>
+      </details>
+
+      <details class="unit-folder">
+        <summary>Unit 14 (April 27 – May 3): Looking Forward on the Internet</summary>
+        <div class="unit-content"><div class="journal-grid"></div></div>
+      </details>
     </main>
   </div>
   <script src="script.js"></script>
